fix: more legible text

--- a/src/assets/styles/components/media-grid.css
+++ b/src/assets/styles/components/media-grid.css
@@ -66,7 +66,7 @@
     & .header,
     & .subheader {
       color: var(--color-lightest);
-      font-size: var(--font-size-xs);
+      font-size: var(--font-size-sm);
       line-height: 1.5;
       text-shadow: rgba(0, 0, 0, 0.7) 0px 0px 10px;
     }
