--- a/src/assets/styles/components/music-chart.css
+++ b/src/assets/styles/components/music-chart.css
@@ -49,7 +49,7 @@
 
     & .subtext,
     & .timestamp {
-      font-size: var(--font-size-xs);
+      font-size: var(--font-size-sm);
     }
 
     & .title,
